@@ -39,7 +39,7 @@
 
       <TextView
         android:id="@+id/text_product_overview_name"
-        style="@style/Widget.Grocy.TextView.Toolbar.BottomSheet"
+        style="@style/Widget.Grocy.TextView.Title.BottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
