@@ -1,87 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ This file is part of Grocy Android.
-  ~
-  ~ Grocy Android is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ Grocy Android is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with Grocy Android. If not, see http://www.gnu.org/licenses/.
-  ~
-  ~ Copyright (c) 2020-2021 by Patrick Zedler and Dominic Zedler
-  -->
-
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:orientation="vertical">
-
-  <TextView
-    android:id="@+id/text_compatibility_title"
-    style="@style/Widget.Grocy.TextView.Toolbar.BottomSheet"
-    android:text="Update warning" />
-
-  <View
-    style="@style/Widget.Grocy.Divider"
-    android:layout_marginTop="0dp"
-    android:layout_marginBottom="0dp" />
-
-  <androidx.core.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:scrollbars="none"
-    android:overScrollMode="ifContentScrolls">
-
-    <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      android:padding="16dp">
-
-      <TextView
-        android:id="@+id/text_compatibility_msg"
-        style="@style/Widget.Grocy.TextView.Paragraph"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="The developer of the grocy server application has announced a new version 3.0.0 for the end of December.
-Among other great things it contains breaking changes in the API, which means that this unofficial Android app will not work properly after updating the server to version 3.0.0.
-\n\nSo if you want to continue using this Android app as usual, you should wait for our update to version 2.0.0 before updating your server to version 3.0.0.
-\n\nVersion 2.0.0 of our app will probably be released in early 2021 and will then no longer support grocy server version 2.7.1.
-\n\nAgain in 'easy' language:
-\n• Grocy Android 1.x.x requires grocy Server 2.7.1
-\n• Grocy Android 2.x.x requires grocy Server 3.0.0 or higher
-\n\nCurrently you are using Grocy Android 1.10.1 on this device." />
-
-      <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="end">
-
-        <com.google.android.material.button.MaterialButton
-          android:id="@+id/button_ok"
-          style="@style/Widget.Grocy.Button.UnelevatedButton"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="8dp"
-          android:textColor="@color/white"
-          android:text="OK"
-          app:backgroundTint="@color/retro_green_bg_white"
-          app:rippleColor="@color/highlight_on_secondary" />
-
-      </LinearLayout>
-
-    </LinearLayout>
-
-  </androidx.core.widget.NestedScrollView>
-
-</LinearLayout>
