@@ -5,6 +5,7 @@
 - Improved: Inventory page now has stock info like on consume page
 - Improved: Hide Open Food Facts option for now, because not implemented yet
 - Improved: Lists now have fade-in animations
+- Fixed: Some bottom sheet headers had wrong padding
 
 2.0.0-beta03
 - New: Support for server version 3.1.1 (v3.1.0 is not supported)
